# samples

./: .gitignore  LICENSE  README.md
configuration_management/ansible/: ada_development.yml  erlang_development.yml  fortran_development.yml  haskell_development.yml  java_development.yml  linux_investigation.yml  octave_development.yml  opengl_vulkan_development.yml  php_development.yml  ruby_development.yml  rust_development.yml
configuration_management/ansible/local/: README.md  c_cpp_development.yml  opengl_vulkan_development.yml  python_interop.yml
configuration_management/salt/: README.md  c_cpp_development.sls  erlang_development.sls  fortran_development.sls  linux_system_investigation.sls  opengl_vulkan_development.sls  php_development.sls  rust_development.sls  venv.sls
graphics/: README.md
graphics/linux/context_creation/: README.md  configure.ac
graphics/linux/context_creation/src/: main.cpp
graphics/linux/extension_loading/: README.md  configure.ac
graphics/linux/extension_loading/src/: Makefile.am
graphics/linux/vulkan/extenson_listing/: Makefile  Makefile.am  README.md  configure.ac
graphics/linux/vulkan/extenson_listing/src/: main.cpp
graphics/linux/vulkan/initial_primitive/: Makefile  Makefile.am  README.md  configure.ac
graphics/linux/vulkan/initial_primitive/src/: main.cpp
graphics/webgl/: README.md  basic_primitive.html
interop/assembly/: README.md
interop/python/: README.md
interop/python/ctypes/: Makefile  ffi.c  main.py
interop/python/embed_cpython/: Makefile  main.c  main.py
interop/python/extend_embedded_cpython/: main.c  main.py
interop/python/ffi/: main.py
interop/rust/: README.md
interop/rust/c_from_rust/: Cargo.toml  build.rs
interop/rust/rust_from_c/: Makefile  main.cpp
linux/: README.md
linux/child_process/: Makefile  Makefile.am  README.md
linux/child_process/src/: main.c
linux/directory_read/: Makefile  Makefile.am  README.md  configure.ac
linux/pipe/: Makefile  Makefile.am  README.md  configure.ac
(+14 files in other folders)
